# RLUtilities

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  DetectCollisions.cp36-win_amd64.pyd  GameInfo.py  LICENSE.txt  LinearAlgebra.cp36-win_amd64.pyd  Maneuvers.py  README.md  Simulation.cp36-win_amd64.pyd  build.sh  build_all.bat  build_and_test.sh  collision_test.py  generate_pyi.sh  launch_rlbot.py  publish.bat  publish_test.bat  pybind11_stubgen.py  setup.py  test.py
RLUtilities/cpp/: CMakeLists.txt
RLUtilities/cpp/inc/: AerialTurn.h  ArcLineArc.h  RL_structs.h  ball.h  linalg.h  mat.h
RLUtilities/cpp/src/: AerialTurn.cpp  Car.cpp  LinearAlgebra.cpp  Mechanics.cpp  lobot.cpp  primitives.cpp
cpp/: CMakeLists.txt
cpp/inc/: Bezier.h  Car.h  Curve.h  RL_structs.h  morton.h  pitch.h  primitives.h  resource.h
cpp/inc/linear_algebra/: math.h  vec.h
cpp/inc/mechanics/: aerial_turn.h  drive.h  drive_path.h  slide.h
cpp/inc/simulation/: ball.h  bezier.h  composite_arc.h  curve.h  field.h  game_data.h  pad.h  path.h
cpp/src/: Car.cpp  LinearAlgebra.cpp  Simulation.cpp  aerial_controls.cpp  ball.cpp  bvh.cpp  detect_collisions_between_cars.cpp  lobot.cpp  mesh.cpp  pitch.bak  pitch.cpp
cpp/src/linear_algebra/: math.cc
cpp/src/mechanics/: aerial.cc  aerial_turn.cc  boostdash.cc  drive.cc  jump.cc  wavedash.cc
cpp/src/misc/: convert.cc
cpp/src/simulation/: ball.cc  bvh.cc  car.cc  composite_arc.cc  curve.cc  game_data.cc  gametype.cc  geometry.cc  unroller.cc
cpp/src/test/: aerial_simulation_perf_test.cc  aerial_turn_simulation_perf_test.cc  bouncing_test.cc  composite_arc_perf_test.cc  generate_navmesh.cc  path_perf_test.cc  unit_test.cc
main/cpp/: CMakeLists.txt
main/cpp/inc/: Aerial.h  AerialTurn.h  Bezier.h  Boostdash.h  Car.h  CompositeArc.h  Curve.h  Dodge.h  Drive.h  DynamicState.h  Jump.h  Maneuvers.h  RL_structs.h  SpeedController.h  Unroller.h  Wavedash.h  ball.h  bvh.h  circles.h  field.h  geometry.h  linalg.h  mat.h  mesh.h  pitch.h  primitives.h  vec.h
main/cpp/inc/linear_algebra/: mat.h  math.h  vec.h
main/cpp/inc/mechanics/: Aerial.h  AerialTurn.h  Boostdash.h  Dodge.h  Drive.h  Jump.h  Wavedash.h  aerial.h  aerial_turn.h  boostdash.h  dodge.h  drive.h  jump.h  wavedash.h
main/cpp/inc/misc/: convert.h  timer.h
main/cpp/inc/simulation/: Car.h  CompositeArc.h  Curve.h  RL_structs.h  Unroller.h  ball.h  bezier.h  bit_packing.h  bvh.h  car.h  circles.h  curve.h  field.h  game_data.h  geometry.h  goal.h  input.h  mesh.h  morton.h  pad.h  unroller.h
main/cpp/src/: Aerial.cpp  AerialTurn.cpp  Boostdash.cpp  Car.cpp  CompositeArc.cpp  Dodge.cpp  Drive.cpp  Jump.cpp  LinearAlgebra.cpp  Mechanics.cpp  SpeedController.cpp  Unroller.cpp  Wavedash.cpp  aerial_controls.cpp  ball.cpp  bot.cpp  bvh.cpp  curve.cpp  detect_collisions_between_cars.cpp  dropshot.cpp  example.cpp  field.cpp  gametype.cpp  geometry.cpp  hoops.cpp  lobot.cpp  mesh.cpp  primitives.cpp  python_extensions.cpp  soccar.cpp
main/cpp/src/linear_algebra/: math.cc  math.cpp
main/cpp/src/mechanics/: Aerial.cpp  AerialTurn.cpp  Dodge.cpp  Drive.cpp  Jump.cpp  aerial_turn.cc  wavedash.cc
main/cpp/src/misc/: convert.cc  convert.cpp
main/cpp/src/simulation/: Car.cpp  CompositeArc.cpp  Unroller.cpp  ball.cpp  bvh.cc  bvh.cpp  car.cc  curve.cpp  dropshot.cc  field.cc  field.cpp  game_data.cc  game_data.cpp  gametype.cpp  mesh.cpp  pad.cpp  soccar.cc
rlutilities/cpp/: CMakeLists.txt
rlutilities/cpp/assets/: bin_to_obj.sh
rlutilities/cpp/inc/linear_algebra/: mat.h  math.h  vec.h
rlutilities/cpp/inc/mechanics/: aerial_turn.h  boostdash.h  dodge.h  drive.h  drive_path.h  follow_path.h  jump.h  wavedash.h
rlutilities/cpp/inc/misc/: convert.h  graph.h  resource.h  rlbot_generated.h
rlutilities/cpp/inc/rlbot/: bot.h  errorcodes.h  examplebot.h  interface.h  renderer.h  rlbot_generated.h
rlutilities/cpp/inc/simulation/: ball.h  bezier.h  bit_packing.h  car.h  circles.h  composite_arc.h  curve.h  field.h  game.h  navigator.h  ogh.h  pad.h  path.h  path_planner.h  unroller.h
rlutilities/cpp/pybind11/: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  setup.cfg
rlutilities/cpp/pybind11/docs/: basics.rst  benchmark.rst  changelog.rst  classes.rst  compiling.rst  conf.py  faq.rst  index.rst  intro.rst  reference.rst  release.rst  upgrade.rst
rlutilities/cpp/pybind11/pybind11/: __init__.py  _version.py
rlutilities/cpp/pybind11/tests/: CMakeLists.txt  conftest.py  constructor_stats.h  local_bindings.h  pybind11_tests.cpp  pybind11_tests.h  pytest.ini  test_buffers.cpp  test_builtin_casters.cpp  test_call_policies.cpp  test_callbacks.cpp  test_callbacks.py  test_chrono.cpp  test_chrono.py  test_class.cpp  test_constants_and_functions.cpp  test_copy_move.cpp  test_eigen.cpp  test_eigen.py  test_enum.cpp  test_enum.py  test_eval.cpp  test_exceptions.cpp  test_exceptions.py  test_factory_constructors.cpp  test_gil_scoped.cpp  test_gil_scoped.py  test_iostream.cpp  test_kwargs_and_defaults.cpp  test_local_bindings.cpp  test_local_bindings.py  test_methods_and_attributes.cpp  test_methods_and_attributes.py  test_modules.cpp  test_multiple_inheritance.cpp  test_numpy_array.cpp  test_numpy_array.py  test_numpy_dtypes.cpp  test_numpy_vectorize.cpp  test_opaque_types.cpp  (+14 more)
rlutilities/cpp/pybind11/tools/: FindCatch.cmake  FindPythonLibsNew.cmake  pybind11Config.cmake.in  pybind11Tools.cmake
rlutilities/cpp/src/: .clang_complete  python_extensions.cc
rlutilities/cpp/src/linear_algebra/: math.cc
rlutilities/cpp/src/mechanics/: aerial.cc  aerial_turn.cc  boostdash.cc  boostdash_pybind11.cc  dodge.cc  dodge_pybind11.cc  drive.cc  drive_path.cc  jump.cc  jump_pybind11.cc  slide_LUTs.cc  wavedash.cc  wavedash_pybind11.cc
rlutilities/cpp/src/misc/: dll.cc  graph.cc  python_extensions.cc
rlutilities/cpp/src/rlbot/: interface.cc  statesetting.cc
rlutilities/cpp/src/simulation/: ball.cc  ball_pybind11.cc  bvh.cc  car.cc  car_pybind11.cc  composite_arc.cc  curve.cc  curve_pybind11.cc  dropshot.cc  field.cc  field_old.cc  game.cc  (+14 more)
(+700 files in other folders)
